compilador/test_programs/invalid/07_non_bool_condition.patito
programa non_bool_condition;
vars:
    x: entero;

inicio {
    x = 5;
    si (x) {
        escribe(x);
    };
}
fin
